[package]
name = "omalley-aoc2022"
version = "0.0.1"
authors = ["Owen O'Malley <omalley@apache.org>"]
edition = "2021"
license = "GPL"
homepage = "https://github.com/omalley/advent_of_code_2022"
repository = "https://github.com/omalley/advent_of_code_2022"
keywords = ["aoc", "advent", "example"]
description = "Solutions to AoC 2022"

[dependencies]
argh = "0.1"
colored = "2"
priority-queue = "1.3"
strum = "0.24"
strum_macros = "0.24"

[dev-dependencies]
criterion = "0.3"

# The "debug" profile
[profile.release]
panic = "abort"
debug = true
lto = "thin"

# The profile to benchmark with (`cargo run --profile benchmark`)
[profile.benchmark]
inherits = "release"
debug = false
lto = "fat"

[profile.bench]
inherits = "release"
debug = false
lto = "fat"

[[bench]]
name = "bench"
harness = false
